--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --experimental-wasi-unstable-preview1 index.js",
-    "debug": "lldb -- node --experimental-wasi-unstable-preview1 index.js",
-    "wasm:debug": "lldb -- wasmtime -g hello.wasm "
+    "node:debug": "lldb -- node --experimental-wasi-unstable-preview1 index.js",
+    "wasmtime:debug": "lldb -- wasmtime -g hello.wasm "
   },
   "keywords": [],
   "author": "",
